[FIX] notebook layout problem.

--- a/openerp/static/css/style.css
+++ b/openerp/static/css/style.css
@@ -355,6 +355,7 @@ div.welcome {
 }
 
 .view .fields {
+    clear: left;
 }
 
 .view table.one2many,
